@@ -14,6 +14,8 @@
 * fixed bug where a variable was improperly nested in an if statement
 * fixed bug with incorrectly disabling link when no href is present in invoking element
 * fixed annoyance (reported at http://plugins.jquery.com/node/1081): default title attributes showing before cluetip when using long interval in hoverIntent.
+* fixed bug where hoverIntent's timeout setting wasn't working with mouseoutClose when user moused out of the clueTip
+* fixed problem with setting width option to "auto". Now, non-number widths such as 'auto' default to 275px.
 
 == 0.9.3 == 
 
